--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -4,13 +4,13 @@
 .page__header {
     background-color: $color-black;
     padding: 3rem 2rem 0 2rem;
-    visibility: hidden;
 
     &--container {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        
         @media screen and (min-width: 40.75em) {
             @include maxWidth;
             align-items: flex-start;
@@ -22,7 +22,6 @@
     &--wrapper {
         @include flexColumnStart;
         margin: 2rem 0;
-        visibility: hidden;
 
         @media screen and (min-width: 46.75em) {
             flex: 0 0 50vw;
@@ -144,6 +143,14 @@
 
         &:active {
             transform: translateY(-.1rem);
+        }
+
+        .btn {
+            font-size: 1.3rem;
+
+            @media screen and (min-width: 50em) {
+                font-size: 1.5rem;
+            }
         }
     }
 
@@ -326,6 +333,8 @@
             grid-column: 1;
             grid-row: 1;
             align-self: center;
+            justify-self: end;
+            margin-right: 3rem;
             writing-mode: vertical-rl;
             text-orientation: upright;
             font-size: 3rem;
@@ -349,6 +358,8 @@
             grid-column: 4 / 5;
             grid-row: 1;
             align-self: center;
+            justify-self: start;
+            margin-left: 3rem;
             writing-mode: vertical-rl;
             text-orientation: upright;
             font-size: 3rem;
